# TinyMathParser

./: CMakeLists.txt  ReadMe.md  ReadMexxx.md  shuntingYard.cpp
src/: TinyMathParser.h  inputAsArguement_Example.cpp  test01.cpp
